--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="stylesheet" href="./development/breakPointsFinder.css">
+  <link rel="icon" href="./pictures/logo.png" />
+  <link rel="apple-touch-icon" href="./pictures/logo.png" />
+  <!-- <link rel="stylesheet" href="./development/breakPointsFinder.css"> -->
   <!-- <link rel="stylesheet" href="./development/layoutFinder.css"> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
